metadata/force-app/main/default/objects/Contact/fields/CW_Strategy__c.field-meta.xml
<CustomField>
    <fullName>CW_Strategy__c</fullName>
    <description>BO-1759: Used to capture the qualification questions as part of CW standalone Trial demo flow.</description>
    <label>Content Ops part of your strategy?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>