metadata/force-app/main/default/objects/Contact/fields/CW_Team__c.field-meta.xml
<CustomField>
    <fullName>CW_Team__c</fullName>
    <description>BO-1759: Used to capture the qualification questions as part of CW standalone Trial demo flow.</description>
    <label>How many people will be involved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>