metadata/force-app/main/default/objects/Contact/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacts important in the decision making process to buy/keep Bynder (e.g. management).
GS NPS: Yes
Newsletter: Yes</description>
    <inlineHelpText>Contacts important in the decision making process to buy/keep Bynder (e.g. management).
GS NPS: Yes
Newsletter: Yes</inlineHelpText>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>