metadata/force-app/main/default/objects/Contact/fields/Delete_Me_From_Database__c.field-meta.xml
<CustomField>
    <fullName>Delete_Me_From_Database__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>Delete Me From Database</label>
    <type>Checkbox</type>
</CustomField>