metadata/force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Webdam field</description>
    <label>Department</label>
    <type>TextArea</type>
</CustomField>