metadata/force-app/main/default/objects/Contact/fields/Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone__c</fullName>
    <description>BODEV-1763: New field in Lead and Contact object, to be mapped with ZoomInfo</description>
    <label>Direct Phone</label>
    <type>Phone</type>
</CustomField>