metadata/force-app/main/default/objects/Contact/fields/Discovery_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_Date__c</fullName>
    <description>BODEV-1849: Lead &amp; Contact: Discovery Call Date</description>
    <label>Discovery Call Date</label>
    <type>Date</type>
</CustomField>