metadata/force-app/main/default/objects/Contact/fields/Download_My_Data__c.field-meta.xml
<CustomField>
    <fullName>Download_My_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>Download My Data</label>
    <type>Checkbox</type>
</CustomField>