metadata/force-app/main/default/objects/Contact/fields/Drift_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Drift_opt_in__c</fullName>
    <description>BODEV-2384 1x text field, 1x workflow in SF for email marketing opt-in(Drift’s SF integration doesn’t support field mapping to checkbox fields)</description>
    <label>Drift opt-in</label>
    <length>10</length>
    <type>Text</type>
</CustomField>