metadata/force-app/main/default/objects/Contact/fields/Drift_Salesloft_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>Drift_Salesloft_Meeting_Booked__c</fullName>
    <description>BODEV-1087: Number field to count associated Tasks where contact type = Meeting Booked. Updated using Activity Counter.
BODEV-1953: Updated the logic in activity counter and renamed the field label.</description>
    <label>Salesloft Meeting Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>