metadata/force-app/main/default/objects/Contact/fields/Email_Preference_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Last_Update__c</fullName>
    <description>wd field</description>
    <label>Email Preference Last Update</label>
    <type>DateTime</type>
</CustomField>