metadata/force-app/main/default/objects/Contact/fields/Email_Template_id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_id__c</fullName>
    <description>Webdam field</description>
    <label>Email Template id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>