metadata/force-app/main/default/objects/Contact/fields/Email_Verification_Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Confidence_Level__c</fullName>
    <description>BODEV-690: Identify email addresses and domains associated with malicious or suspicious networks.</description>
    <label>Email Verification Confidence Level</label>
    <length>30</length>
    <type>Text</type>
</CustomField>