metadata/force-app/main/default/objects/Contact/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <formula>Account.cbit_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>