metadata/force-app/main/default/objects/Contact/fields/End_of_the_year_gift__c.field-meta.xml
<CustomField>
    <fullName>End_of_the_year_gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked contacts will receive a christmas card</description>
    <label>End of the year gift</label>
    <type>Checkbox</type>
</CustomField>