metadata/force-app/main/default/objects/Contact/fields/End_of_year_card__c.field-meta.xml
<CustomField>
    <fullName>End_of_year_card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of year card</label>
    <type>Checkbox</type>
</CustomField>