metadata/force-app/main/default/objects/Contact/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End User</label>
    <type>Checkbox</type>
</CustomField>