metadata/force-app/main/default/objects/Contact/fields/Exclude_from_Campaign_Influence__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Campaign_Influence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Webdam field
&quot;When checked this record will be excluded from Full Circle Campaign Influence Calculations&quot;</description>
    <inlineHelpText>When checked this record will be excluded from Full Circle Campaign Influence Calculations</inlineHelpText>
    <label>Exclude from Campaign Influence</label>
    <type>Checkbox</type>
</CustomField>