metadata/force-app/main/default/objects/Contact/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First point of Contact for CSM. Important in the decision making process.
GS NPS: Yes
Newsletter: Yes</description>
    <inlineHelpText>First point of Contact for CSM. Important in the decision making process.
GS NPS: Yes
Newsletter: Yes</inlineHelpText>
    <label>Champion</label>
    <type>Checkbox</type>
</CustomField>