metadata/force-app/main/default/objects/Contact/fields/Facing_current_challenges__c.field-meta.xml
<CustomField>
    <fullName>Facing_current_challenges__c</fullName>
    <inlineHelpText>Answer on the Question: Do you have challenges managing digital files?</inlineHelpText>
    <label>Facing current challenges?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>