metadata/force-app/main/default/objects/Contact/fields/FCR_Created_By_Lead_Conversion__c.field-meta.xml
<CustomField>
    <fullName>FCR_Created_By_Lead_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Set to false by default this value is mapped from lead on conversion.</description>
    <inlineHelpText>Set to true if contact was created from lead conversion.</inlineHelpText>
    <label>Created By Lead Conversion</label>
    <type>Checkbox</type>
</CustomField>