metadata/force-app/main/default/objects/Contact/fields/FCR_Name_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Name_Created_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>wd field
Indicates the day the name was created. If contact is created from lead convert, the value will be populated from the lead.</description>
    <label>Name Created Date</label>
    <type>Date</type>
</CustomField>