metadata/force-app/main/default/objects/Contact/fields/FCR_Nurture_Timeout__c.field-meta.xml
<CustomField>
    <fullName>FCR_Nurture_Timeout__c</fullName>
    <description>wd field
Nurture timeout date for this contact.</description>
    <inlineHelpText>Indicates the earliest date this contact can promote out of nurture for follow up.</inlineHelpText>
    <label>Nurture Timeout</label>
    <type>Date</type>
</CustomField>