metadata/force-app/main/default/objects/Contact/fields/FCR_Status__c.field-meta.xml
<CustomField>
    <fullName>FCR_Status__c</fullName>
    <description>Webdam field</description>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open - Not Contacted</fullName>
            </value>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Nurture/Marketing</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Active Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>