metadata/force-app/main/default/objects/Contact/fields/FCR_Status_Synced_From_Response__c.field-meta.xml
<CustomField>
    <fullName>FCR_Status_Synced_From_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Administrative field that indicates that the status of this contact was set during response sync.</description>
    <label>Status Synced From Response</label>
    <type>Checkbox</type>
</CustomField>