metadata/force-app/main/default/objects/Contact/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-62: one of Contact Roles on Contacts</description>
    <inlineHelpText>Contact person in the Finance department</inlineHelpText>
    <label>Finance</label>
    <type>Checkbox</type>
</CustomField>