metadata/force-app/main/default/objects/Contact/fields/First_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Owner__c</fullName>
    <description>First user who owns a contact</description>
    <inlineHelpText>First user who owns a contact</inlineHelpText>
    <label>First Contact Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>