metadata/force-app/main/default/objects/Contact/fields/First_Contact_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Owner_Team__c</fullName>
    <description>Based on User Sales Team and User who first owned the Contact</description>
    <label>First Contact Owner BDR Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>