metadata/force-app/main/default/objects/Contact/fields/G2_survey_completed__c.field-meta.xml
<CustomField>
    <fullName>G2_survey_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this contact completed the G2 survey?</description>
    <inlineHelpText>Has this contact completed the G2 survey?</inlineHelpText>
    <label>G2 survey completed</label>
    <type>Checkbox</type>
</CustomField>