metadata/force-app/main/default/objects/Contact/fields/G2_survey_requested__c.field-meta.xml
<CustomField>
    <fullName>G2_survey_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Bynder requested the survey to be filled in by this contact?</description>
    <inlineHelpText>Has Bynder requested the survey to be filled in by this contact?</inlineHelpText>
    <label>G2 survey requested</label>
    <type>Checkbox</type>
</CustomField>