metadata/force-app/main/default/objects/Contact/fields/GDPR_Consent_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_Last_Updated__c</fullName>
    <description>wd field</description>
    <label>GDPR - Consent Last Updated</label>
    <type>Date</type>
</CustomField>