metadata/force-app/main/default/objects/Contact/fields/GDPR_Consent_to_Processing__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Consent_to_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>GDPR - Consent to Processing</label>
    <type>Checkbox</type>
</CustomField>