metadata/force-app/main/default/objects/Contact/fields/GDPR_Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Email_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>GDPR - Email Consent</label>
    <type>Checkbox</type>
</CustomField>