metadata/force-app/main/default/objects/Contact/fields/Gong__Added_to_Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Gong__Added_to_Flow_Date__c</fullName>
    <label>Date Added to Engage Flow</label>
    <type>Date</type>
</CustomField>