metadata/force-app/main/default/objects/Contact/fields/Gong__Current_Flow_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_Task_Due_Date__c</fullName>
    <label>Engage Step Completion Date</label>
    <type>Date</type>
</CustomField>