metadata/force-app/main/default/objects/Contact/fields/Guides__c.field-meta.xml
<CustomField>
    <fullName>Guides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>Guides</label>
    <type>Checkbox</type>
</CustomField>