metadata/force-app/main/default/objects/Contact/fields/Have_specific_business_requirement__c.field-meta.xml
<CustomField>
    <fullName>Have_specific_business_requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have specific business requirement</label>
    <type>Checkbox</type>
</CustomField>