metadata/force-app/main/default/objects/Contact/fields/Hide_Date__c.field-meta.xml
<CustomField>
    <fullName>Hide_Date__c</fullName>
    <description>wd mkto field</description>
    <label>Hide Date</label>
    <type>Date</type>
</CustomField>