metadata/force-app/main/default/objects/Contact/fields/Hubspot_End_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_End_Funnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hubspot End Funnel</label>
    <type>Checkbox</type>
</CustomField>