metadata/force-app/main/default/objects/Contact/fields/Hubspot_Mid_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Mid_Funnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hubspot Mid Funnel</label>
    <type>Checkbox</type>
</CustomField>