metadata/force-app/main/default/objects/Contact/fields/Hubspot_Top_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Top_Funnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hubspot Top Funnel</label>
    <type>Checkbox</type>
</CustomField>