metadata/force-app/main/default/objects/Contact/fields/Ideal_Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Customer_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ideal Customer Profile</label>
    <type>Checkbox</type>
</CustomField>