metadata/force-app/main/default/objects/Contact/fields/Ignore_Leandata__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Leandata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Leandata</label>
    <type>Checkbox</type>
</CustomField>