metadata/force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Webdam field
&quot;Field to describe no longer used contacts - left organization, etc&quot;</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>