metadata/force-app/main/default/objects/Contact/fields/Include_in_Newsletter_del__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Newsletter_del__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for partner accounts</inlineHelpText>
    <label>Include in Partner Newsletter</label>
    <type>Checkbox</type>
</CustomField>