metadata/force-app/main/default/objects/Contact/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <formula>TEXT(Account.Industry_Group__c)</formula>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>