metadata/force-app/main/default/objects/Contact/fields/Inferred_City__c.field-meta.xml
<CustomField>
    <fullName>Inferred_City__c</fullName>
    <description>mkto71_Inferred_City__c</description>
    <label>Inferred City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>