metadata/force-app/main/default/objects/Contact/fields/Inferred_Company__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Company__c</fullName>
    <description>mkto71_Inferred_Company__c</description>
    <label>Inferred Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>