metadata/force-app/main/default/objects/Contact/fields/Inferred_Country__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Country__c</fullName>
    <description>mkto71_Inferred_Country__c</description>
    <label>Inferred Country (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>