metadata/force-app/main/default/objects/Contact/fields/Inferred_Metropolitan_Area__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Metropolitan_Area__c</fullName>
    <inlineHelpText>mkto71_Inferred_Metropolitan_Area__c</inlineHelpText>
    <label>Inferred Metropolitan Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>