metadata/force-app/main/default/objects/Contact/fields/Inferred_Phone_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Phone_Area_Code__c</fullName>
    <description>mkto71_Inferred_Phone_Area_Code__c</description>
    <label>Inferred Phone Area Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>