metadata/force-app/main/default/objects/Contact/fields/Inferred_State_Region__c.field-meta.xml
<CustomField>
    <fullName>Inferred_State_Region__c</fullName>
    <description>mkto71_Inferred_State_Region__c</description>
    <label>Inferred State Region (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>