metadata/force-app/main/default/objects/Contact/fields/Influitive__c.field-meta.xml
<CustomField>
    <fullName>Influitive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contact is part of the Bynder Influitive community</inlineHelpText>
    <label>Influitive</label>
    <type>Checkbox</type>
</CustomField>