metadata/force-app/main/default/objects/Contact/fields/Is_there_an_active_project__c.field-meta.xml
<CustomField>
    <fullName>Is_there_an_active_project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there an active project?</label>
    <type>Checkbox</type>
</CustomField>