metadata/force-app/main/default/objects/Contact/fields/IT_Contact__c.field-meta.xml
<CustomField>
    <fullName>IT_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For example a contact that is in charge of maintaining the domain, certificates, integrations etc. but not necessarily a support contact.
GS NPS: No
Newsletter: No</description>
    <inlineHelpText>For example a contact that is in charge of maintaining the domain, certificates, integrations etc. but not necessarily a support contact.
GS NPS: No
Newsletter: No</inlineHelpText>
    <label>IT Contact</label>
    <type>Checkbox</type>
</CustomField>