metadata/force-app/main/default/objects/Contact/fields/Last_Date_Contacted_for_Reference__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Contacted_for_Reference__c</fullName>
    <description>Webdam field</description>
    <label>Last Date Contacted for Reference</label>
    <type>Date</type>
</CustomField>