metadata/force-app/main/default/objects/Contact/fields/Last_Interesting_Moment__c.field-meta.xml
<CustomField>
    <fullName>Last_Interesting_Moment__c</fullName>
    <description>mkto wd field</description>
    <formula>IF(!ISNULL(Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
    <label>Last Interesting Moment</label>
    <type>Text</type>
</CustomField>