metadata/force-app/main/default/objects/Contact/fields/Last_Interesting_Moment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interesting_Moment_Date__c</fullName>
    <description>mkto wd field</description>
    <label>Last Interesting Moment Date</label>
    <type>DateTime</type>
</CustomField>