metadata/force-app/main/default/objects/Contact/fields/Last_Interesting_Moment_Desc__c.field-meta.xml
<CustomField>
    <fullName>Last_Interesting_Moment_Desc__c</fullName>
    <label>Last Interesting Moment Desc</label>
    <type>TextArea</type>
</CustomField>