metadata/force-app/main/default/objects/Contact/fields/Last_Interesting_Moment_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Interesting_Moment_Type__c</fullName>
    <description>mkto wd field</description>
    <label>Last Interesting Moment Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>