metadata/force-app/main/default/objects/Contact/fields/Last_Webinar_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Webinar_Attended_Date__c</fullName>
    <description>BODEV-34</description>
    <label>Last Webinar Attended Date</label>
    <type>Date</type>
</CustomField>