metadata/force-app/main/default/objects/Contact/fields/Last_Webinar_Attended_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Webinar_Attended_URL__c</fullName>
    <description>BODEV-34</description>
    <label>Last Webinar Attended URL</label>
    <type>Url</type>
</CustomField>