metadata/force-app/main/default/objects/Contact/fields/Lead_Source_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detailed__c</fullName>
    <description>Webdam field
&quot;Brandworkz&quot;</description>
    <label>Lead Source Detailed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>CASE List 01/08/09</fullName>
            </value>
            <value>
                <fullName>CA Schools - Mar/Comm</fullName>
            </value>
            <value>
                <fullName>Web Search - US Univ</fullName>
            </value>
            <value>
                <fullName>UPAA List</fullName>
            </value>
            <value>
                <fullName>CoSIDA</fullName>
            </value>
            <value>
                <fullName>Jigsaw</fullName>
            </value>
            <value>
                <fullName>MDR</fullName>
            </value>
            <value>
                <fullName>UCDA 2010</fullName>
            </value>
            <value>
                <fullName>Visistat</fullName>
            </value>
            <value>
                <fullName>BrightTALK Lead Gen</fullName>
            </value>
            <value>
                <fullName>Love Your Brand Virtual Event</fullName>
            </value>
            <value>
                <fullName>Elance Lead Gen</fullName>
            </value>
            <value>
                <fullName>Elance Lead Gen - Top 100 Brands</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Other web source</fullName>
            </value>
            <value>
                <fullName>Brandworkz</fullName>
            </value>
            <value>
                <fullName>HOW Design Live 2013</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>Mobile App Form</fullName>
            </value>
            <value>
                <fullName>Referral - Referral Partner</fullName>
            </value>
            <value>
                <fullName>Application - Reseller Partner</fullName>
            </value>
            <value>
                <fullName>Application - Technology Partner</fullName>
            </value>
            <value>
                <fullName>Application - Referral Partner</fullName>
            </value>
            <value>
                <fullName>HOW Design Live 2014</fullName>
            </value>
            <value>
                <fullName>BRITE Conference 2015</fullName>
            </value>
            <value>
                <fullName>MarTech 2015</fullName>
            </value>
            <value>
                <fullName>HOW Design Live 2015</fullName>
            </value>
            <value>
                <fullName>BMA Conference 2015</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>