metadata/force-app/main/default/objects/Contact/fields/LeadIQ_Sourced__c.field-meta.xml
<CustomField>
    <fullName>LeadIQ_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeadIQ Sourced</label>
    <type>Checkbox</type>
</CustomField>