metadata/force-app/main/default/objects/Contact/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>Legacy ID from Webdam Salesforce instance.</description>
    <externalId>true</externalId>
    <label>Contact Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>