metadata/force-app/main/default/objects/Contact/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacts part of the customer&apos;s Legal team.
GS NPS: No
Newsletter: No</description>
    <inlineHelpText>Contacts part of the customer&apos;s Legal team.
GS NPS: No
Newsletter: No</inlineHelpText>
    <label>Legal</label>
    <type>Checkbox</type>
</CustomField>